# mmap-exp

./: .gitignore  go.mod  makefile  mmapext_c.go  readme.md
cmd/example/: main.go
mmapext/: .clang-format  .gitignore  CMakeLists.txt
mmapext/cmd/: CMakeLists.txt
mmapext/cmd/mmapext_example/: CMakeLists.txt  mmapext_example.cpp
mmapext/cmd/test_map_large_file/: CMakeLists.txt  command.hpp  test_map_large_file.cpp  util.hpp
mmapext/include/mmapext/: defs.h  mmapext.h
mmapext/sourcedeps/linenoise/: CMakeLists.txt  README.markdown
mmapext/sourcedeps/scaffold/: .gitignore
mmapext/sourcedeps/scaffold/gdb_inspect/: collection_types_inspect.py
mmapext/sourcedeps/scaffold/include/scaffold/: const_log.h  hash.h  memory.h  murmur_hash.h  one_time_allocator.h  pod_hash.h  queue.h  scanner.h
mmapext/sourcedeps/scaffold/src/: CMakeLists.txt  murmur_hash.cpp  one_time_allocator.cpp  scanner.cpp
mmapext/sourcedeps/scaffold/tests/: allocator_test.cpp  buddy_array_test.cpp  buddytest.cpp  buddytestbig.cpp  dypackeduintarraytest.cpp  fo_test.cpp  packeduintarraytest.cpp  pod_hash_test_2.cpp  single_test.cpp
mmapext/src/: CMakeLists.txt  mmapext.cpp
